added swagger documentation and CORS middleware
