# internal/features/tasks/transport/http/create_task.go
@@ -10,13 +10,24 @@ import (
 )
 
 type CreateTaskRequest struct {
-	Title        string  `json:"title" validate:"required,min=1,max=100"`
-	Description  *string `json:"description" validate:"omitempty,min=1,max=1000"`
-	AuthorUserID int     `json:"author_user_id" validate:"required"`
+	Title        string  `json:"title" validate:"required,min=1,max=100"          example:"Short title"`
+	Description  *string `json:"description" validate:"omitempty,min=1,max=1000"  example:"Long description"`
+	AuthorUserID int     `json:"author_user_id" validate:"required"               example:"5"`
 }
 
 type CreateTaskResponse TaskDTOResponse
 
+// CreateTask    godoc
+// @Summary      Создать задачу
+// @Description  Создать новую задачу в системе
+// @Tags         tasks
+// @Accept       json
+// @Produce      json
+// @Param        request body	CreateTaskRequest	true         "CreateTask тело запроса"
+// @Success      201 {object}	CreateTaskResponse               "Успешно созданная задача"
+// @Failure      400 {object}	core_http_response.ErrorResponse "Bad request"
+// @Failure      500 {object}	core_http_response.ErrorResponse "Internal server error"
+// @Router       /tasks [POST]
 func (h *TasksHTTPHandler) CreateTask(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
