# internal/features/tasks/transport/http/delete_task.go
@@ -8,6 +8,16 @@ import (
 	core_http_response "github.com/odelshchwank/BigProjectLesson/internal/core/transport/http/response"
 )
 
+// DeleteTask    godoc
+// @Summary      Удаление задачи
+// @Description  Удалить существующую в системе задачу по ее ID
+// @Tags         tasks
+// @Param        id  path  int  true                              "ID удаляемой задач"
+// @Success      204                                              "Успешное удаление задачи"
+// @Failure      400 {object}	core_http_response.ErrorResponse  "Bad request"
+// @Failure      404 {object}	core_http_response.ErrorResponse  "Not found"
+// @Failure      500 {object}	core_http_response.ErrorResponse  "Internal server error"
+// @Router       /tasks/{id} [DELETE]
 func (h *TasksHTTPHandler) DeleteTask(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
