# internal/features/tasks/transport/http/patch_task.go
@@ -12,9 +12,9 @@ import (
 )
 
 type PatchTaskRequest struct {
-	Title       core_http_types.Nullable[string] `json:"title"`
-	Description core_http_types.Nullable[string] `json:"description"`
-	Completed   core_http_types.Nullable[bool]   `json:"completed"`
+	Title       core_http_types.Nullable[string] `json:"title"        swaggertype:"string" example:"Планы на вечер"`
+	Description core_http_types.Nullable[string] `json:"description"  swaggertype:"string" example:"null"`
+	Completed   core_http_types.Nullable[bool]   `json:"completed"    swaggertype:"boolean"`
 }
 
 func (r *PatchTaskRequest) Validate() error {
@@ -49,6 +49,23 @@ func (r *PatchTaskRequest) Validate() error {
 
 type PatchTaskResponse TaskDTOResponse
 
+// PatchTask     godoc
+// @Summary      Обновить задачу
+// @Description  Обновляет информацию об уже существующей в системе задаче
+// @Description  1. **Поле не передано**: `description` игнорируется, значение в БД не меняется
+// @Description  2. **Явно передано значение**: `description`: "Попить пиво" - устанавливает новую описание для задачи
+// @Description  3. **Передан null**: `description`: null - очищает поле в БД (set to NULL)
+// @Description  Ограничения: `title` и `completed` не могут быть выставлены как null
+// @Tags         tasks
+// @Accept       json
+// @Produce      json
+// @Param        id       path      int                true           "ID изменяемой задачи"
+// @Param        request  body	    PatchTaskRequest   true           "PatchTask тело запроса"
+// @Success      201      {object}	PatchTaskResponse                 "Успешно измененная задача"
+// @Failure      400      {object}	core_http_response.ErrorResponse  "Bad request"
+// @Failure      409      {object}	core_http_response.ErrorResponse  "Conflict"
+// @Failure      500      {object}	core_http_response.ErrorResponse  "Internal server error"
+// @Router       /tasks/{id} [PATCH]
 func (h *TasksHTTPHandler) PatchTask(rw http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	log := core_logger.FromContext(ctx)
